--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <center><p>Downloads:</p>
-<button type="button" onclick="window.open('https://github.com/edward789121/hacked_blocks.json/zipball/master')">ZIP</button>
-<button type="button" onclick="window.open('https://github.com/edward789121/hacked_blocks.json/tarball/master')">TAR</button>
+<a href=https://github.com/edward789121/hacked_blocks.json/zipball/master><button>ZIP</button></a>
+<a href=https://github.com/edward789121/hacked_blocks.json/tarball/master><button>TAR</button></a>
 <p><a href=https://github.com/PuzzlePieceScratchMod/PuzzlePiece-flash/>View on GitHub</a></p>
 <font size="3" color="red">Warning:</font><font size=2>I have not edited the Primitives! only the "old" category will work.</font>
